--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import "@fontsource/ibm-plex-mono";
+import ThemeToggle from "../components/ThemeToggle.astro";
 ---
 
 <!DOCTYPE html>
@@ -15,6 +16,14 @@ import "@fontsource/ibm-plex-mono";
   </head>
   <body>
     <Header />
+    <div class="theme-toggle"><ThemeToggle /></div>
     <slot />
   </body>
 </html>
+
+<style>
+  .theme-toggle {
+    position: absolute;
+    right: 0;
+  }
+</style>
