Add theme toggle animation delay for smoothness

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -42,11 +42,13 @@ import { Icon } from "astro-icon";
     opacity: 1;
     transform: translateY(0) rotateZ(0deg);
     transition: all 0.7s ease-in;
+    transition-delay: 0.3s;
   }
 
   input:checked ~ .icon-moon {
     opacity: 1;
     transform: translateY(0%) rotateZ(0deg);
+    transition-delay: 0.3s;
   }
   input:checked ~ .icon-sun {
     opacity: 0;
