--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -69,5 +69,13 @@ import { Icon } from "astro-icon";
     .theme-switch-wrapper {
       right: -0.5rem;
     }
+
+  @media screen and (max-width: 400px) {
+    .theme-switch-wrapper{
+      top: 0.85rem;
+    }
+    .icon {
+      width: 2.25rem;
+  }
   }
 </style>
