Layout fixed for smallest devices

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,5 +7,5 @@ import Navigation from "./Navigation.astro";
   <h1 class="line-decoration-1" id="header__title">
     <a href="/">Jacek Smoter</a>
   </h1>
-  <Navigation client:load />
+  <Navigation />
 </header>
