--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,24 +2,11 @@
 import "../styles/global.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import About from "../components/About.astro";
+
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>ASTRO</title>
-  </head>
-
-  <body class="body__container">
-    <BaseLayout>
-      
-      <About />
-    </BaseLayout>
-  </body>
-
-
-</html>
+<BaseLayout>
+  <div class="div__container">
+    <About />
+  </div>
+</BaseLayout>
