--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,12 @@
 :root {
   --green: #16ff00;
-  --black: #1b1c1e;
+  --black: #141516;
   --white: #f9f9f9;
 }
 
 .dark {
   --black: #f9f9f9;
-  --white: #1b1c1e;
+  --white: #141516;
   --green: #008800;
 }
 /* RESET AND GENERAL SETTINGS */
@@ -59,6 +59,19 @@ h6 {
 
 /* TYPOGRAPHY SETTINGS */
 
+/* ibm-plex-mono-regular - latin-ext_latin */
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 html {
   font-size: 16px;
   line-height: 1.5;
@@ -74,7 +87,6 @@ h1 {
 h2 {
   font-size: 2.2rem;
   text-transform: uppercase;
-  font-weight: 400;
 }
 
 p {
@@ -263,6 +275,9 @@ header {
 .section__about p,
 a {
   color: var(--black);
+}
+
+.section__about a {
   cursor: pointer;
 }
 
@@ -298,9 +313,6 @@ footer {
 footer a:hover {
   background-color: var(--black);
   color: var(--white);
-}
-
-.header__nav-homepage {
 }
 
 /* Dark theme switcher */
