--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,50 @@
+/* ibm-plex-mono-regular - latin-ext_latin */
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../../public/fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../../public/fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: local(""),
+    url("../fonts/ibm-plex-mono-v15-latin-ext_latin-600.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-mono-v15-latin-ext_latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* ibm-plex-mono-regular - latin-ext_latin */
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* ibm-plex-mono-700 - latin-ext_latin */
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""),
+    url("../fonts/ibm-plex-mono-v15-latin-ext_latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-mono-v15-latin-ext_latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 :root {
   --green: #16ff00;
   --black: #141516;
@@ -57,20 +104,11 @@ h6 {
   color: var(--black);
 }
 
-/* TYPOGRAPHY SETTINGS */
-
-/* ibm-plex-mono-regular - latin-ext_latin */
-@font-face {
-  font-family: "IBM Plex Mono";
-  font-style: normal;
-  font-weight: 400;
-  src: local(""),
-    url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff2")
-      format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/ibm-plex-mono-v15-latin-ext_latin-regular.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+h2 {
+  font-weight: normal;
 }
+
+/* TYPOGRAPHY SETTINGS */
 
 html {
   font-size: 16px;
