Fix homepage scrolling bug

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import About from "../components/About.astro";
 ---
 
 <BaseLayout>
-  <div class="div__container">
+  <div class="body__container">
     <About />
   </div>
 </BaseLayout>
